# a-maze-ing

./: .gitignore  LICENSE.md  Makefile  README.md  README.txt  a_maze_ing.py  config.txt  gen_maze.py  genmaze.py  mlx_view.py  pyproject.toml  solve_maze.py  solver.py  write_maze.py
