[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Seed-based maze generator and solver"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }

[tool.setuptools]
py-modules = ["mazegen"]
